[package]
name = "sshfs"
authors = ["SSHFS Maintainers"]
version = "0.1.0"
publish = false
edition = "2021"

[lib]
name = "libsshfs"
crate-type = ["staticlib", "rlib"]

[dependencies]
libc= "0.2"
libfuse-sys = {version = "0.4.0", features = ["fuse_35"] }
users = "0.11.0"
lazy_static = "1.4.0"
clap = { version = "4.0.19", features = ["string"] }
nix = "0.25.0"
rand = "0.8.5"
